# HashProgram

./: CMakeLists.txt  Readme.md  build.sh  output_file
src/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp  HashCreator.cpp  HashCreator.hpp  Logger.cpp  Logger.hpp  constants.hpp  main.cpp  strConstants.hpp
tests/: CMakeLists.txt  tests.cpp
